✨ Added translations for dropdowns, fixed scripting for items and added android studio

--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -152,6 +152,16 @@
         }
       }
     },
+    "None" : {
+      "localizations" : {
+        "nl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Geen"
+          }
+        }
+      }
+    },
     "Oops!" : {
       "localizations" : {
         "nl" : {
@@ -208,6 +218,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Meldingen toestaan?"
+          }
+        }
+      }
+    },
+    "Select" : {
+      "localizations" : {
+        "nl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Selecteer"
           }
         }
       }
